# GADGIT

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  setup.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
demo/: brca.pkl  ecoli.txt  ecoli_degree-between.pkl
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
gadgit/: GAInfo.py  GAOutput.py  GeneInfo.py  __init__.py  debug.py  ga_single.py  gadgit.py  post_run.py  simple_ga.py
gadgit/helpers/: __init__.py  make_centrality_frame.py
tests/: __init__.py  brca.csv  brca.pkl  ecoli.txt  test_datasets.py  test_gadgit.py
